# nodeServer/src/db/models/index.ts
@@ -1,3 +1,5 @@
 export * from './user';
 export * from './myplant';
 export * from './testPlant';
+export * from './plant';
+export * from './infoplant';
